<resources>
    <string name="app_name">IRecruitment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="applications">Applications</string>
    <string name="more">More</string>
    <string name="resumes">Resumes</string>
    <string name="vacancies">Vacancies</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="country">Country</string>
    <string name="syria">Syria</string>
    <string name="city">City</string>
    <string name="damascus">Damascus</string>
    <string name="min_edu_level">Min. edu. level</string>
    <string name="any">Any</string>
    <string name="field_of_work">Field of work</string>
    <string name="programming">Programming</string>
    <string name="job_type">Job type</string>
    <string name="cv_language">CV Language</string>
    <string name="photo">Photo</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="error_required">Required</string>
    <string name="error_invalid_name_password">Invalid username or password</string>
    <string name="main_information">Main Information</string>
    <string name="military">Military</string>
    <string name="driving_license">Driving License</string>
    <string name="dependencies_number">Dependencies Number</string>
    <string name="full_address">Full Address</string>
    <string name="gsm_code">GSM Code</string>
    <string name="objective">Objective</string>
    <string name="main_interests">Main interests</string>
    <string name="job_category">Job category</string>
    <string name="career_level">Career Level</string>
    <string name="work_county">Work County</string>
    <string name="work_city">Work City</string>
    <string name="notice_period">Notice period</string>
    <string name="salary">Salary</string>
    <string name="desired_net_salary">Desired net Salary</string>
    <string name="last_month_salary">Last month Salary</string>
    <string name="work_experiences">Work Experiences</string>
    <string name="references">References</string>
    <string name="skills">Skills</string>
    <string name="languages">Languages</string>
    <string name="mother_tong">Mother tong</string>
    <string name="education_degree">Education Degree</string>
    <string name="cover_letter">Cover letter</string>
    <string name="view_more">View More</string>
    <string name="new_email">New Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="gsm_number">GSM number</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="name_in_arabic">Name in Arabic</string>
    <string name="name_in_english">Name in English</string>
    <string name="english_address">English Address</string>
    <string name="arabic_address">Arabic Address</string>
    <string name="company_industry">Company Industry</string>
    <string name="english_about">English About</string>
    <string name="arabic_about">Arabic About</string>
    <string name="commercial_register">Commercial Register</string>
    <string name="p_o_box">P.O.Box</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gsm">GSM</string>
    <string name="contact_person">Contact Person</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="position">Position</string>
    <string name="visibility">Visibility</string>
    <string name="minimum_education_degree_level">Minimum education degree level</string>
    <string name="hide_company_name">Hide Company Name</string>
    <string name="currency">Currency</string>
    <string name="is_active">Is active?</string>
    <string name="forget_password">Forget Password</string>
    <string name="msg_sent_code">We\'ve sent you a code to your phone/ Email</string>
    <string name="msg_insert_code">Insert the sent code her please</string>
    <string name="code">Code</string>
    <string name="msg_time_to_receive_code">It might takes several minutes to receive the code</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>
    <string name="position_title">Position Title</string>
    <string name="required_years_of_experience">Required years of experience</string>
    <string name="job_description">Job description</string>
    <string name="pre_requisites">Pre-requisites</string>
    <string name="skills_needed">skills needed</string>
    <string name="benefits">Benefits</string>
    <string name="required_employees_number">Required employees number</string>
    <string name="about_the_company">About the company</string>
    <string name="city_county">City, County</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="full_name">Full Name</string>
    <string name="choose">Choose</string>
    <string name="sign_in">Sign In</string>
    <string name="gsm_e_mail_username">GSM/ E-mail/ Username</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="txt_agree">I agree to the terms and conditions</string>
    <string name="more_specifications">More Specifications</string>
    <string name="description">Description</string>
    <string name="verify_it_s_you">Verify it\'s you!</string>
    <string name="new_gsm_number">New GSM Number</string>
    <string name="reading">Reading</string>
    <string name="confirm">Confirm</string>
</resources>